feat: multiple input directories

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NUM_PRODUCER_THREADS=
 HOSTNAME=
 PORT=
-VIDEO_DIRECTORY=videos
+
+# Use a comma-delimited string, like "videos1,videos2"
+VIDEO_DIRECTORIES=videos1,videos2
