Updated: README and .gitignore

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ HOSTNAME=
 PORT=
 
 # Use a comma-delimited string, like "videos1,videos2"
-VIDEO_DIRECTORIES=videos1,videos2
+# VIDEO_DIRECTORIES=videos1,videos2
+VIDEO_DIRECTORIES=
