feat: multithreading (no queue)

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-NUM_PRODUCER_THREADS=
 HOSTNAME=
 PORT=
 
 # Use a comma-delimited string, like "videos1,videos2"
-# VIDEO_DIRECTORIES=videos1,videos2
-VIDEO_DIRECTORIES=
+# Length of video_directories is the number of producer threads
+VIDEO_DIRECTORIES=videos1,videos2
