--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-HOSTNAME=
-PORT=
-
-# Use a comma-delimited string, like "videos1,videos2"
-# Length of video_directories is the number of producer threads
-VIDEO_DIRECTORIES=videos1,videos2
+NUM_PRODUCER_THREADS=4        # Adjust the number of producer threads as needed
+HOSTNAME=localhost            # Set the appropriate hostname
+PORT=3000                     # Set the port for communication
+VIDEO_DIRECTORIES=/path/to/videos  # Set video directories
