Updated: removed values in env template

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NUM_PRODUCER_THREADS=4        # Adjust the number of producer threads as needed
-HOSTNAME=localhost            # Set the appropriate hostname
-PORT=3000                     # Set the port for communication
-VIDEO_DIRECTORIES=/path/to/videos  # Set video directories
+NUM_PRODUCER_THREADS=
+HOSTNAME=
+PORT=
+VIDEO_DIRECTORIES=
