docs: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-NUM_PRODUCER_THREADS=
+# "localhost" or a valid IP address
 HOSTNAME=
+
+# port for main thread
 PORT=
+
+# Comma-separated list of directories, e.g. "videos1,videos2,videos3"
+# 1 worker thread is generated per directory
 VIDEO_DIRECTORIES=
